[package]
name = "circular-resources"
version = "0.2.2"
edition = "2021"
description = "A `Vec` together with a position that moves circularly"
authors = ["Victor Porton"]
license = "Apache-2.0"
homepage = "https://github.com/vporton/circular-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
